--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,8 @@
       "downloads",
       "nativeMessaging",
       "webRequest",
-      "notifications"
+      "notifications",
+      "downloads.shelf"
     ],
     "host_permissions": [
       "<all_urls>"
