good version with background loading, preview regen and optimized code overall

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,7 +10,8 @@
       "nativeMessaging",
       "webRequest",
       "notifications",
-      "downloads.shelf"
+      "downloads.shelf",
+      "storage"
     ],
     "host_permissions": [
       "<all_urls>"
