--- a/native_host/manifest.json
+++ b/native_host/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "com.mycompany.ffmpeg",
   "description": "Video Downloader Native Host",
-  "path": "HOST_PATH",
+  "path": "/Users/sellavi/Desktop/Codes/video-downloader-mv3/native_host/index.js",
   "type": "stdio",
   "allowed_origins": [
-    "chrome-extension://EXTENSION_ID/"
+    "chrome-extension://bkblnddclhmmgjlmbofhakhhbklkcofd/"
   ]
 }
