--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -29,6 +29,12 @@
       "type": "module"
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": ["js/utilities/video-validator.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
