REMOVED caching system and lots with it)) fixing one by one

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,6 +10,7 @@
     "downloads",
     "nativeMessaging",
     "webRequest",
+    "webNavigation",
     "notifications",
     "downloads.shelf",
     "storage"
