--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,7 +19,7 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "background/index.js",
     "type": "module"
   },
   "content_scripts": [
