--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 .DS_Store
+
+# Ignore CSS modules folder - all styles are bundled into popup.css
+extension/popup/css/
+
+# Node modules
+node_modules/
+
+# IDE files
+.vscode/
+.idea/
+
+# Logs
+*.log
