new: cookies are attached in real-time to headers (saving just in case)

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,7 +13,8 @@
     "webNavigation",
     "notifications",
     "downloads.shelf",
-    "storage"
+    "storage",
+    "cookies"
   ],
   "host_permissions": [
     "<all_urls>"
