NEW: custom ffmpeg build with parser fix from 2007 forum lol, now it handles dash manifests with & correctly! OMG

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .DS_Store
 
 # Node modules
-node_modules/
+native_host/node_modules/
+native_host/bin/
+
+# Build directories
+build/
 
 # IDE files
 .vscode/
