new: took ffmpeg build from VDH as a working fixed solution, coz i'm fkn tired building my own version with modern codecs

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 
 # Node modules
 native_host/node_modules/
-native_host/bin/
 
 # Build directories
-build/
+ffmpeg_build/
 
 # IDE files
 .vscode/
