upd: changed NH manifest and references to pro.maxvideodownloader.coapp

--- a/native_host/manifest.json
+++ b/native_host/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.mycompany.ffmpeg",
+  "name": "pro.maxvideodownloader.coapp",
   "description": "Video Downloader Native Host",
   "path": "/Users/sellavi/Desktop/Codes/video-downloader-mv3/native_host/host",
   "type": "stdio",
