Add Windows and Linux support for native host
- Add comprehensive build instructions for all platforms
- Add FFmpeg setup guide with platform-specific instructions
- Update build.sh with Windows and Linux build targets
- Update package.json with cross-platform build scripts
- Support for win-x64, win-arm64, linux-x64, linux-arm64 targets

--- a/native_host/package.json
+++ b/native_host/package.json
@@ -17,7 +17,13 @@
   "scripts": {
     "build": "./build.sh -build",
     "build:mac": "./build.sh -build mac-arm64",
-    "build:app": "./build.sh -package-app",
+    "build:win": "./build.sh -build win-x64",
+    "build:linux": "./build.sh -build linux-x64",
+    "build:all": "npm run build:mac && npm run build:win && npm run build:linux",
+    "package:mac": "./build.sh -package-app",
+    "package:linux": "./build.sh -package-linux",
+    "package:windows": "./build.sh -package-windows",
+    "package:all": "npm run package:mac && npm run package:linux && npm run package:windows",
     "install": "./build.sh -install",
     "uninstall": "./build.sh -uninstall",
     "version": "./build.sh -version",
