new: now we compile FFMPEG from custom build (still many issues to fix, currently it's 7.1.1 with dashdec.c fix to escape ampersands)
- upd version for ffmpeg in validate-connection

- new precompiled binaries (my own)

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ native_host/node_modules/
 node_modules/
 
 # Build directories
-ffmpeg_build/
+# my-ffmpeg-builder/
+competitor-test/
 
 # IDE files
 .vscode/
