ref: - separated bulid/install/uninstall logic for NH - now ffmpeg paths are relative to executor mvdcoapp - now mvdcoapp registers on mac/linux on double click on complied executable (args === 0), and uses path of executable for it - added install/uninstall shell files to a bundle for mac

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dist:win-arm64": "cd native_host && ./build.sh dist win-arm64",
     "dist:linux-x64": "cd native_host && ./build.sh dist linux-x64",
     "dist:linux-arm64": "cd native_host && ./build.sh dist linux-arm64",
-    "install-host": "cd native_host && ./build.sh install",
-    "uninstall-host": "cd native_host && ./build.sh uninstall",
+    "install": "cd native_host && ./install.sh",
+    "uninstall": "cd native_host && ./uninstall.sh",
     "version-host": "cd native_host && ./build.sh version"
   },
   "devDependencies": {
